# my-laser-ink

./: .gitignore  README.md  pixi.toml  pyproject.toml  test_config.py  test_context_init.py  test_plf.py  test_simulator.py  validate_spooler.py  validate_spooler_clean.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint-test.yml
data/: org.rayforge.rayforge.desktop  org.rayforge.rayforge.metainfo.xml
docs/: CONTRIBUTING.md  architecture.md  device_api.md  licensing.md  pesquisa_laser_open_source.md  release.md  repo_layout.md  system_prompt  testing.md
docs/adr/: 0001-architecture-decisions-template.md
docs/drivers/: grbl.md
flatpak/: README.md
rayforge/: app.py  context.py
rayforge/core/: doc.py  hooks.py  library_manager.py  material.py  package.py  plf.py  pyvips_safe.py  workpiece.py
rayforge/core/geo/: transform.py
rayforge/core/varset/: baudratevar.py  floatvar.py  hostnamevar.py  intvar.py  portvar.py  serialportvar.py
rayforge/doceditor/: file_cmd.py
rayforge/image/: base_renderer.py  image_util.py  material_test_grid_renderer.py  ops_renderer.py
rayforge/image/bmp/: importer.py  renderer.py
rayforge/image/dxf/: renderer.py
rayforge/image/jpg/: importer.py  renderer.py
rayforge/image/pdf/: renderer.py
rayforge/image/png/: importer.py  renderer.py
rayforge/image/procedural/: renderer.py
rayforge/image/sketch/: renderer.py
rayforge/image/svg/: renderer.py  svgutil.py
rayforge/machine/driver/: __init__.py  driver.py  grbl_adapter.py  laserweb_adapter.py  meerk40t_adapter.py  smoothie.py
rayforge/machine/models/: machine.py
rayforge/machine/transport/: __init__.py  http.py  laserweb.py  serial.py  transport.py  udp.py
rayforge/pipeline/: exporter.py  steps.py
rayforge/pipeline/producer/: __init__.py  advanced_raster.py  galvo.py  rasterize.py
rayforge/pipeline/transformer/: __init__.py  array.py  corner_power.py  lead_in_out.py  multipass.py  sort_shapes.py
rayforge/shared/: README.md
rayforge/shared/util/: versioning.py
rayforge/ui_gtk/: about.py  actions.py  main_menu.py  mainwindow.py
rayforge/ui_gtk/canvas2d/: surface.py
rayforge/ui_gtk/doceditor/: add_material_dialog.py  (+3 more)
scripts/: grbl_bench_validate.py
tests/: run_recovery_test.py  test_device_api_integration.py  test_gcode_spooler.py  test_spooler_recovery.py
website/: mkdocs.yml
website/content/: index.md
website/overrides/: home.html
(+79 files in other folders)
